--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 <body>
     <div class="digitalClock">
         <nav class="menu">
-            <a href="#" style="color: red;" onclick="location.href = 'index.html'">시계</a>
+            <a href="#" style="color: #594432;" onclick="location.href = 'index.html'">시계</a>
             <a href="#" onclick="location.href = 'timer.html'">타이머</a>
             <a href="#" onclick="location.href = 'stopwatch.html'">스톱워치</a>
         </nav>
         <div class="time"></div>
         <div class="date"></div>
+        <div class="myusername">
+            <span>soyoung2022</span>
+        </div>
     </div>
     <script src="js/clock.js"></script>
 </body>
