--- a/stopwatch.html
+++ b/stopwatch.html
@@ -14,13 +14,16 @@
         <nav class="menu">
             <a href="#" onclick="location.href = 'index.html'">시계</a>
             <a href="#" onclick="location.href = 'timer.html'">타이머</a>
-            <a href="#" style="color: red;" onclick="location.href = 'stopwatch.html'">스톱워치</a>
+            <a href="#" style="color: #594432;" onclick="location.href = 'stopwatch.html'">스톱워치</a>
         </nav>
         <div class="time"></div>
         <div class="btns">
-            <button class="clear">clear</button>
-            <button class="stop">stop</button>
-            <button class="start">start</button>
+            <button class="clear">취소</button>
+            <button class="stop">일시정지</button>
+            <button class="start">시작</button>
+        </div>
+        <div class="myusername">
+            <span>soyoung2022</span>
         </div>
     </div>
     <script src="js/stopwatch.js"></script>
