--- a/timer.html
+++ b/timer.html
@@ -19,11 +19,11 @@
         <div class="alert"></div>
         <div class="set-timer">
             <form class="input-form" autocomplete="off">
-                <input id="inputHour" type="text" required placeholder=0 min=0>
+                <input id="inputHour" type="text" required placeholder=0 min=0 max="99">
                 <span>시간</span>
-                <input id="inputMinute" type="text" required placeholder=0 min=0>
+                <input id="inputMinute" type="text" required placeholder=0 min=0 max="99">
                 <span>분</span>
-                <input id="inputSecond" type="text" placeholder=0 min=0 required>
+                <input id="inputSecond" type="text" placeholder=0 min=0 required max="99">
                 <span>초</span>
                 <input type="submit" class="hidden">
             </form>
